--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     <!--Sale Image-->
     <div class="Sale-Image">
         <img src="./images/sale-images.jpg" alt="Sale Image">
+        <div class="sale-image__offer">
+            <h2>udemy Flash Sal! 24 hours to save</h2>
+            <p>
+                get the top courses for just 499. just one day to save but a lifetime to learn
+            </p>
+
+        </div>
 
     </div>
 
