--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <i class="fa-solid fa-bell" style="color: #0c0d0d;"></i>
             <i class="fa-sharp fa-solid fa-user" style="color: #141415;"></i>
         </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+
+        </div>
 
     </div>
 
